--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="#contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="main-btn" href="#contact">Hire Me</a>
+                <a class="main-btn" href="#contact">Hire MeM</a>
               </li>
             </ul>
           </div>
