--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     <header class="header_wrapper">
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="images/logo.png" class="img-fluid" alt="Logo" />
-          </a>
+          <!-- <a class="navbar-brand active" href="#home"> {{-- <img src="images/logo.png" class="img-fluid" alt="Logo" /> --}} My Portfolio </a> -->
+          <a class="navbar-brand active" href="#home"> My Portfolio </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
             <i class="navbar-toggler-icon fas fa-stream"></i>
@@ -38,9 +37,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="#about">About</a>
               </li>
+              {{--
               <li class="nav-item">
                 <a class="nav-link" href="#services">Services</a>
               </li>
+              --}}
               <li class="nav-item">
                 <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
@@ -81,7 +82,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-5 mb-4 mb-lg-0">
-            <img src="images/about.jpg" class="img-fluid rounded-3" alt="" />
+            <img src="images/about-andri.jpg" class="img-fluid rounded-3" alt="" />
           </div>
           <div class="col-lg-7 ps-lg-5 text-center text-lg-start">
             <div class="mt-3 my-lg-0">
@@ -120,11 +121,11 @@
                   </div>
 
                   <div class="single-progress">
-                    <h6>HTML</h6>
+                    <h6>Rest API</h6>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span class="label">85%</span>
+                    <span class="label">75%</span>
                   </div>
 
                   <div class="single-progress">
@@ -167,7 +168,7 @@
                       2022
                     </li>
                     <li>
-                      <a href="https://drive.google.com/file/d/12rqpAIKiRZ_J46sYauEKElhPbksqIZ5_/view?usp=sharing">Dunia Coding</a>
+                      <a href="https://drive.google.com/file/d/12rqpAIKiRZ_J46sYauEKElhPbksqIZ5_/view?usp=sharing" target="_blank">Dunia Coding</a>
                       2022
                     </li>
                   </ul>
@@ -223,6 +224,7 @@
     <!-- End About Section -->
 
     <!-- Start Services Section -->
+    {{--
     <section id="services" class="services_wrapper">
       <div class="container">
         <div class="row">
@@ -290,6 +292,7 @@
         </div>
       </div>
     </section>
+    --}}
     <!-- End Services Section -->
 
     <!-- Start Portfolio Section -->
@@ -309,21 +312,6 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="card p-0">
               <span style="background-image: url('./images/portfolio/Foodies.png')"></span>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card p-0">
-              <span style="background-image: url('./images/portfolio/App-Landing-Page.png')"></span>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card p-0">
-              <span style="background-image: url('./images/portfolio/E-Commerce-Website-Using-Bootstap-5.png')"></span>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card p-0">
-              <span style="background-image: url('./images/portfolio/HeadPhones.png')"></span>
             </div>
           </div>
         </div>
@@ -379,17 +367,19 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 col-md-6 text-center text-md-start">
+            {{--
             <div class="footer-logo mb-3 mb-md-0">
               <img src="images/logo.png" class="img-fluid" alt="" />
             </div>
+            --}}
           </div>
           <div class="col-lg-4 col-md-6">
             <ul class="list-unstyled d-flex justify-content-center justify-content-md-end justify-content-lg-center social-icon mb-3 mb-md-0">
               <li>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.instagram.com/andrifs05/" target="_blank"><i class="fab fa-instagram"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-facebook-f" target="_blank"></i></a>
               </li>
             </ul>
           </div>
