--- a/index.html
+++ b/index.html
@@ -367,11 +367,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 col-md-6 text-center text-md-start">
-            {{--
-            <div class="footer-logo mb-3 mb-md-0">
+            <!-- <div class="footer-logo mb-3 mb-md-0">
               <img src="images/logo.png" class="img-fluid" alt="" />
-            </div>
-            --}}
+            </div> -->
           </div>
           <div class="col-lg-4 col-md-6">
             <ul class="list-unstyled d-flex justify-content-center justify-content-md-end justify-content-lg-center social-icon mb-3 mb-md-0">
